--- a/custom.css
+++ b/custom.css
@@ -21,6 +21,7 @@ img {
 .background {
     position: absolute;
     left: 0;
+    top: -500px;
     display: flex;
 }
 
@@ -38,7 +39,10 @@ h3{font-weight: normal; color: #f3ebe1;}
     max-width: 60%;
     margin-left: auto;
     margin-right: auto;
-    transform: translateY(-100%);
+    transform: translateY(-60%);
+    padding: 20px;
+    background-color: rgba(115,183, 243, 0.5);
+    border-radius: 10px;
     line-spacing: 2;
 }
 
@@ -55,7 +59,7 @@ li {list-style: none; margin-bottom: 30px; text-align: center;}
 
 .nav {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
     margin: 0;
     padding-top: 60px;
     margin-bottom: 20px;
@@ -96,16 +100,16 @@ li {list-style: none; margin-bottom: 30px; text-align: center;}
     margin: 60px auto 0 auto;
     line-height: 2.5;
     transform: translateY(-200px);
-    justify-content: flex-start;
+    justify-content: flex-end;
 }
 
-.biopic {
-    width: 800px;
-    height: auto;
-    position: absolute;
-    right: 0;
-    top: -400px;
+.biowords {
+    padding: 20px;
+    background-color: rgba(115,183, 243, 0.8);
+    border-radius: 10px;
 }
+
+
 
 .art-gallery {
     transform: translateY(-150px);
@@ -119,7 +123,7 @@ li {list-style: none; margin-bottom: 30px; text-align: center;}
     display: flex;
     align-items: center;
     justify-content: space-around;
-    background-color: #ebe6d8;
+    background-color: rgba(115,183, 243, 0.5);
     border-radius: 10px;
     flex-wrap: wrap;
 }
